<resources>
    <string name="app_name">MyBudget</string>
    <string name="password">Your Password</string>
    <string name="email">Your Email</string>
    <string name="fullName">Full Name</string>
    <string name="backToLogin">Back to Login</string>
    <string name="signUp">SIGN UP</string>
    <string name="login">LOGIN</string>
    <string name="homePage">HOME PAGE</string>
    <string name="signout">Sign Out</string>
    <string name="noAccount">Don\'t Have Account? Signup Here</string>
    <string name="addEntry">NEW ENTRY</string>
    <string name="currentBalance">$ 0.00</string>
    <string name="amountEntry">AMOUNT</string>
    <string name="earning">Earned</string>
    <string name="spending">Spent</string>
    <string name="enterAmount">Enter Amount...</string>
    <string name="submit">SUBMIT</string>
    <string name="source">Source Of Earning/Spending</string>
    <string name="enterSource">ENTER SOURCE HERE</string>
    <string name="description">DESCRIPTION (Optional)</string>
    <string name="optionalDescription">Enter Description Here</string>
    <string name="currentBalanceText">CURRENT BALANCE</string>
    <string name="dollarSign">$</string>
    <string name="earnedOrSpent">EarnedOrSpent</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="enter_deposit_expense">Enter Deposit/Expense</string>
    <string name="budget">Budget</string>
    <string name="alerts">Alerts</string>
    <string name="help">Help</string>
    <string name="communicate">Communicate</string>
    <string name="profile">Profile</string>
    <string name="history">History</string>
    <string name="home">Home</string>
    <string name="initPrompt">Would you like to set up your minimum balance and initial balance?</string>
    <string name="budgetLimit">Minimum Balance</string>
    <string name="initBalance">Initial Balance</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="resetPass">RESET PASSWORD</string>
    <string name="setProfilePic">Choose Profile Pic</string>

    <string name="chart_title">History</string>
    <string name="profile_image">Image</string>
    <string name="profile_label">Turn minimum balance alert on/off:</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="save">Save</string>
    <string name="takePhoto">Take photo</string>
    <string name="generalFaq">General FAQ</string>
    <string name="question1">Q. Why this app?</string>
    <string name="question2">Q. How to add an Expense?</string>
    <string name="question3">Q. How to turn off budget alerts?</string>
    <string name="question4">Q. Can I take receipt snapshot to update my expenses?</string>
    <string name="answer1">- MyBudget App allows you to keep track of your expenses and savings. Moreover, we provide budget alerts when reaching a threshold amount.</string>
    <string name="answer2">- First you need to sign up/login. Click on the New Entry button and make sure to click on Spent button at the top. Fill out all the remaining text fields and click the submit button.</string>
    <string name="answer3">- Go to your profile. There is a button to turn off the budget alerts. Click save afterwards.</string>
    <string name="answer4">- Yes, while filling out the expense, you can simply click on the Take Photo button and click the picture of your receipt.</string>


</resources>