<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProfileActivity"
    android:orientation="vertical">
<!--app:shapeAppearanceOverlay="@style/roundedImageViewRounded"-->

    <ImageView
        android:id="@+id/profileDp"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="5dp"
        android:adjustViewBounds="true"
        android:layout_gravity="center"
        android:padding="1dp"
        android:src="@drawable/ic_profile"
        app:strokeColor="@android:color/white"
        app:strokeWidth="5dp"
        android:contentDescription="@string/profile_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:layout_margin="15dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/fullName"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/tv_profile_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="John Doe"
            android:textAlignment="textStart" />
    </LinearLayout>
    <LinearLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="12dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="@string/profile_label"
            android:textStyle="bold"
            android:textAlignment="textStart"
            android:layout_height="0dp" />
    </LinearLayout>
    <RadioGroup
        android:id="@+id/RG_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        android:layout_gravity="end">
        <RadioButton
            android:id="@+id/rb_profile_on"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:checked="true"
            android:text="@string/on" />
        <RadioButton
            android:id="@+id/rb_profile_off"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/off" />
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:layout_margin="15dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/budgetLimit"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/et_profile_budget_limit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/budgetLimit"
            android:background="@drawable/text_border"
            android:inputType="numberDecimal"
            android:textSize="18sp"
            android:padding="10dp"
            android:autofillHints=""
            android:textAlignment="textEnd" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_buttons"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_margin="15dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:onClick="saveProfile"
            android:text="@string/save" />
    </LinearLayout>

</LinearLayout>